--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="column-1">
             <input type="search" name="search" placeholder="Search..."/>
-            <button type="button"><img src="img/magnifier.svg" align="serch"></button>
+            <button type="button"><img src="img/magnifier.svg" alt="search"></button>
         </div>
         <section class="result">
             <div class="column-3">
